<resources>
    <string name="app_name">CampusDiary</string>
    <string name="MON">月</string>
    <string name="TUE">火</string>
    <string name="WED">水</string>
    <string name="THU">木</string>
    <string name="FRI">金</string>
    <string name="SAT">土</string>
    <string name="SUN">日</string>
    <string name="Reference0">立命館学園の構成</string>
    <string name="Reference1">入学から始まる立命館ファミリー</string>
    <string name="Reference2">図書館を利用したい</string>
    <string name="Reference3">卒業後のキャリア形成を考えたい、就職活動について知りたい</string>
    <string name="Reference4">異文化・外国語に触れる機会が欲しい</string>
    <string name="Reference5">「教養科目」について知りたい</string>
    <string name="Reference6">学生同士で学びあいたい</string>
    <string name="Reference7">課外自主活動がしたい</string>
    <string name="Reference8">落し物をした・落し物を拾った</string>
    <string name="Reference9">雨なのに傘がない</string>
    <string name="Reference10">自転車・バイクで通学したい</string>
    <string name="Reference11">パソコン・情報機器の利用について相談したい</string>
    <string name="Reference12">授業や成績のこと・休学・転籍などについて相談したい</string>
    <string name="Reference13">引っ越して現住所が変わった</string>
    <string name="Reference14">通学定期券を買いたい</string>
    <string name="Reference15">学生証が盗難にあった、落としてしまった</string>
    <string name="Reference16">学割が欲しい・在学証明書や成績証明書を発行したい・証書を発行したい</string>
    <string name="Reference17">トラブルや困りごとがある</string>
    <string name="Reference18">正課・課外の活動中に怪我をしてしまった</string>
    <string name="Reference19">財布を失くした、盗難にあったなどの緊急事態で一時的にお金を借りたい</string>
    <string name="Reference20">奨学金について相談したい・家計が急変して学費が払えない・自分にあった奨学金を探したい</string>
    <string name="Reference21">ケガをした・体調が悪くなった</string>
    <string name="Reference22">からだのことやこころの健康について相談したい</string>
    <string name="Reference23">大学生活の目標が見つからない・友達づきあいがうまくいかない・将来のことが不安…などの悩みを相談したい</string>
    <string name="Reference24">障害学生支援について相談したい</string>
    <string name="Reference25">「台風が近づいている」「大雪で電車が運行停止になるかも」そんなとき授業がどうなるのかを知りたい</string>
    <string name="Reference26">公欠・出席停止などの授業の欠席に関する取り扱いについて知りたい</string>
    <string name="Reference27">窓口時間・電話番号</string>
    <string name="Reference28">アクセスマップ</string>

    <!-- NavigationDrawerのItemになる文字列 -->
    <string name="nav_Calendar">カレンダー</string>
    <string name="nav_SchoolYear">学年暦</string>
    <string name="nav_Todo">Todoリスト</string>
    <string name="nav_regulation">利用規約</string>

    <!-- Layoutで使うStrings -->
    <string name="regulation_title">利用規約</string>

    <!-- Calendar Label Tags -->
    <string name="ruby">ルビー</string>
    <string name="sapphire">サファイア</string>
    <string name="emerald">エメラルド</string>
    <string name="gold">ゴールド</string>
    <string name="perl">パール</string>
    <string name="amethyst">アメジスト</string>
    <string name="tigerEye">タイガーアイ</string>
    <string name="diamond">ダイヤモンド</string>
    <string name="topaz">トパーズ</string>

    <!-- activitiy_calendar_add_schedule -->
    <string name="new_event">イベントの作成</string>
    <string name="new_event_name">予定を入力してください</string>
    <string name="new_event_theme">テーマ</string>
    <string name="new_event_detail">詳細</string>
    <string name="new_event_discard">削除</string>

    <!-- component_time_table_dialog -->
    <string name="subject_name">教科名</string>
    <string name="class_room_name">教室名</string>

    <!-- layout_reference_search_bar -->
    <string name="search_hint">キーワード</string>

    <!-- 数字 -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>

    <!-- layout_top_tabs -->
    <string name="tool_bar">ToolBar</string>


</resources>
