<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/time_table_top_date_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/time_table_top_date_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/time_table_right_bar_width"
            android:layout_height="@dimen/time_table_top_date_height"
            android:gravity="center"
            android:background="@drawable/time_table_tob_date_bar_background"/>

        <TextView
            android:layout_width="@dimen/time_table_top_date_width"
            android:layout_height="@dimen/time_table_top_date_height"
            android:gravity="center"
            android:background="@drawable/time_table_tob_date_bar_background"
            android:text="@string/MON" />

        <TextView
            android:layout_width="@dimen/time_table_top_date_width"
            android:layout_height="@dimen/time_table_top_date_height"
            android:gravity="center"
            android:background="@drawable/time_table_tob_date_bar_background"
            android:text="@string/TUE" />

        <TextView
            android:layout_width="@dimen/time_table_top_date_width"
            android:layout_height="@dimen/time_table_top_date_height"
            android:gravity="center"
            android:background="@drawable/time_table_tob_date_bar_background"
            android:text="@string/WED" />

        <TextView
            android:layout_width="@dimen/time_table_top_date_width"
            android:layout_height="@dimen/time_table_top_date_height"
            android:gravity="center"
            android:background="@drawable/time_table_tob_date_bar_background"
            android:text="@string/THU" />

        <TextView
            android:layout_width="@dimen/time_table_top_date_width"
            android:layout_height="@dimen/time_table_top_date_height"
            android:gravity="center"
            android:background="@drawable/time_table_tob_date_bar_background"
            android:text="@string/FRI" />

        <TextView
            android:layout_width="@dimen/time_table_top_date_width"
            android:layout_height="@dimen/time_table_top_date_height"
            android:gravity="center"
            android:background="@drawable/time_table_tob_date_bar_background"
            android:text="@string/SUT" />


    </LinearLayout>

</merge>